<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:padding="20dp"
    tools:context=".Activity.AddActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/task_details"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="26sp"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_gravity="center"

            android:layout_height="wrap_content">
            <LinearLayout
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bg_color"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:text="Task"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
                <EditText
                    android:id="@+id/etTask"
                    android:layout_marginBottom="12sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/task"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:text="@string/priority"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
                <RadioGroup
                    android:id="@+id/rgPriority"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:orientation="horizontal">
                    <RadioButton
                        android:id="@+id/rbLow"
                        android:layout_marginHorizontal="4dp"
                        android:textColor="@color/white"
                        android:checked="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hint_low"/>
                    <RadioButton
                        android:id="@+id/rbMedium"
                        android:textColor="@color/white"
                        android:layout_marginHorizontal="4dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hint_medium"/>
                    <RadioButton
                        android:id="@+id/rbHigh"
                        android:textColor="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/high"/>

                </RadioGroup>



                <Button
                    android:id="@+id/btnSave"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape"
                    android:layout_marginVertical="50dp"
                    android:layout_marginHorizontal="60dp"
                    android:text="@string/save"
                    android:textColor="@color/ui" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</LinearLayout>